--- a/styles/architects.css
+++ b/styles/architects.css
@@ -7,3 +7,84 @@
   font-weight:400;
   font-style: normal;
 }
+
+
+/* Shared style */
+.display-flex{
+    display: flex;
+}
+
+.btn-primary{
+    background-color: #FF900E;
+    color: white;
+    padding: 20px 25px;
+    font-weight: 600;
+    font-size: 1.25rem;
+    border: none;
+    border-radius: 8px;
+}
+
+/* dark-2 */
+.text-gray{
+    color: #424242;
+}
+/* dark-3 */
+.text-light-gray{
+    color: #727272;
+}
+
+
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+
+/* header style */
+
+
+
+/* navbar related styles */
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+}
+.brand{
+    font-weight: bold;
+    font-size: 3rem;
+}
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+.nav-link{
+    font-size: 18px;
+}
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+
+/* banner related styles */
+.banner-container{
+    max-width: 850px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+}
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+    color: #131313;
+}
+.banner-image{
+width: 100%;
+}
+
+/* responsive media query */
+@media screen and (max-width: 576px) {
+    .nabvar, .nav-links{
+        flex-direction: column;
+    }
+    
+}
