--- a/styles/architects.css
+++ b/styles/architects.css
@@ -13,6 +13,17 @@
 .display-flex{
     display: flex;
 }
+.text-primary{
+    color: #FF900E;
+}
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+main > section{
+    margin-top: 130px;
+}
 
 .btn-primary{
     background-color: #FF900E;
@@ -81,10 +92,90 @@
 width: 100%;
 }
 
+/* Main styles */
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+/* teams and feature relatede styles */
+.teams{
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.our-features{
+    margin-left: 70px;
+    max-width: 530px;
+}
+
+.feature-description{
+    margin-top:24px ;
+    margin-bottom: 32px;
+
+}
+#Quick-list{
+    font-weight: 500;
+}
+
+/* some fact related style */
+.fact-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+.fact-card{
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+.fact-description{
+    max-width: 540px;
+}
+
+
 /* responsive media query */
 @media screen and (max-width: 576px) {
-    .nabvar, .nav-links{
+    .nabvar, 
+    .nav-links,
+    .teams
+    {
         flex-direction: column;
     }
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .our-features{
+        margin-left: 20px;
+    }
     
+}
+
+/* Medium size device */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin: 50px auto;
+    }
 }
