added sponsor section and made it responsive

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -150,6 +150,23 @@ main{
 }
 .fact-description{
     max-width: 540px;
+    margin-top: 24px;
+    margin-bottom: 100px;
+}
+
+/* sponsor relatad style */
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+.sponsor-companies{
+    filter: grayscale(100%);
 }
 
 
@@ -161,8 +178,16 @@ main{
     {
         flex-direction: column;
     }
-    .team-img-container{
+    .team-img-container, .fact-container, .sponsor-companies{
         grid-template-columns: repeat(1, 1fr);
+    }
+    .sponsor-companies{
+        justify-items: center;
+        gap: 50px;
+    }
+    .fact-container{
+        justify-items: center;
+        gap: 24px;
     }
     .our-features{
         margin-left: 20px;
@@ -177,5 +202,11 @@ main{
     }
     .our-features{
         margin: 50px auto;
+    }
+    .sponsor-companies, .fact-container{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px;
+        justify-items: center;
+        
     }
 }
