--- a/styles/architects.css
+++ b/styles/architects.css
@@ -121,6 +121,29 @@ main{
 #Quick-list{
     font-weight: 500;
 }
+/* features section related style */
+#feature-section-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+.features{
+    gap: 140px;
+}
+.feature-card{
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+
+
+}
+.feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
 
 /* some fact related style */
 .fact-container{
