--- a/styles/architects.css
+++ b/styles/architects.css
@@ -143,7 +143,20 @@ main{
     margin-bottom: 0;
     margin-top: 0;
 }
-
+.featured-architect img{
+    width: 100%;
+}
+#Experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+#Experience-years{
+    font-size: 4rem;
+    font-weight: 700;
+}
 
 /* some fact related style */
 .fact-container{
@@ -191,6 +204,21 @@ main{
 .sponsor-companies{
     filter: grayscale(100%);
 }
+footer{
+    margin-top: 30px;
+}
+.footer{
+    background-color: rgba(255, 244, 231, 1);
+    border-radius: 8px;
+    text-align: center;
+    width: 1440px;
+    margin: 0 auto;
+    height: 100px;
+    padding-top: 50px;
+}
+
+
+
 
 
 /* responsive media query */
@@ -198,6 +226,7 @@ main{
     .nabvar, 
     .nav-links,
     .teams
+    .features
     {
         flex-direction: column;
     }
@@ -212,6 +241,10 @@ main{
         justify-items: center;
         gap: 24px;
     }
+    #Experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
     .our-features{
         margin-left: 20px;
     }
@@ -220,8 +253,12 @@ main{
 
 /* Medium size device */
 @media screen and (min-width: 576px) and (max-width: 992px) {
-    .teams{
+    .teams, .features{
         flex-direction: column;
+    }
+    #Experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
     }
     .our-features{
         margin: 50px auto;
